test/deca/syntax/invalid/decl_var_virgule.deca
// Description:
//    tests de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur, (manque deuxième argument après virgule)

{
    int x, = 2
}